[gd_scene load_steps=15 format=3 uid="uid://bi7d0qrjcx2y1"]

[ext_resource type="Theme" uid="uid://brehe2nbmg28h" path="res://tres/default_btn.tres" id="1_ck37j"]
[ext_resource type="Shader" path="res://shader/blur.gdshader" id="1_q6x7v"]
[ext_resource type="Script" path="res://scripts/pouse_menu.gd" id="1_u3f7u"]
[ext_resource type="Shader" path="res://shader/blur_transition.gdshader" id="2_tkj5y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_seeru"]
shader = ExtResource("1_q6x7v")
shader_parameter/lod = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kybkt"]
shader = ExtResource("2_tkj5y")
shader_parameter/progress = 0.0
shader_parameter/loud = 1.0

[sub_resource type="InputEventAction" id="InputEventAction_6gnwa"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_cn85i"]
events = [SubResource("InputEventAction_6gnwa")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1vjj"]

[sub_resource type="Animation" id="Animation_xc5kn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg_overlay/bg_transition:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mle01"]
resource_name = "exit_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay/bg_transition:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_7ml70"]
resource_name = "pause_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ylpva"]
resource_name = "resume_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2g25"]
_data = {
"RESET": SubResource("Animation_xc5kn"),
"exit_game": SubResource("Animation_mle01"),
"pause_game": SubResource("Animation_7ml70"),
"resume_game": SubResource("Animation_ylpva")
}

[node name="pouse_menu" type="CanvasLayer"]
script = ExtResource("1_u3f7u")

[node name="bg_overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_seeru")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg_transition" type="ColorRect" parent="bg_overlay"]
material = SubResource("ShaderMaterial_kybkt")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu_holder" type="VBoxContainer" parent="bg_overlay"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="bg_overlay/menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_ck37j")
shortcut = SubResource("Shortcut_cn85i")
text = "   RESUME   "

[node name="HSeparator3" type="HSeparator" parent="bg_overlay/menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_y1vjj")

[node name="exit_btn" type="Button" parent="bg_overlay/menu_holder"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_ck37j")
text = "   SAIR   "

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2g25")
}
autoplay = "pause_game"

[connection signal="pressed" from="bg_overlay/menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="bg_overlay/menu_holder/exit_btn" to="." method="_on_exit_btn_pressed"]
